@@ -1,6 +1,8 @@
 glibc (2.19-12) UNRELEASED; urgency=medium
 
-  * 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-thread-cancel.diff: Update patch from upstream, fixes
+    a rare deadlock.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Sep 2014 07:22:45 +0200
 
